--- a/EdgeLedger/image_resources/index.html
+++ b/EdgeLedger/image_resources/index.html
@@ -39,5 +39,131 @@
         >
       </div>
     </header>
+
+    <main>
+      <!-- About:Icons -->
+      <section id="about" class="icons">
+        <div class="flex-items">
+          <div>
+            <i class="fas fa-university fa-2x"></i>
+            <div>
+              <h3>Investment Banking</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Provident consectetur obcaecati itaque nostrum ipsa dignissimos
+                possimus saepe sed, quibusdam aliquid.
+              </p>
+            </div>
+          </div>
+          <div>
+            <i class="fas fa-book-reader fa-2x"></i>
+            <div>
+              <h3>Portfolio Manager</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Provident consectetur obcaecati itaque nostrum ipsa dignissimos
+                possimus saepe sed, quibusdam aliquid.
+              </p>
+            </div>
+          </div>
+          <div>
+            <i class="fas fa-pencil-alt fa-2x"></i>
+            <div>
+              <h3>Tax & Custodial</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Provident consectetur obcaecati itaque nostrum ipsa dignissimos
+                possimus saepe sed, quibusdam aliquid.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- About:Solutions -->
+      <section class="solutions flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="./home/people.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-primary">
+              <h4>What you are looking for</h4>
+              <h2>We provide bespoke solutions</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                illum, animi earum ea amet sequi reiciendis sit corporis sunt
+                iusto cupiditate odio maxime adipisci cumque eligendi nemo
+                dolore id itaque?
+              </p>
+              <a href="#" class="btn btn-outline">
+                <i class="fas fa-chevron"></i>
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Cases -->
+      <section id="cases" class="cases flex-grid section-padding">
+        <header class="section-header">
+          <h4>This is what we do</h4>
+          <h2>Business Cases</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
+            nulla aliquam aliquid laboriosam ipsam nihil suscipit laborum
+            distinctio praesentium quae?
+          </p>
+        </header>
+        <div class="row">
+          <div class="column">
+            <img src="./cases/cases1.jpg" alt="" />
+            <img src="./cases/cases2.jpg" alt="" />
+          </div>
+          <div class="column">
+            <img src="./cases/cases3.jpg" alt="" />
+            <img src="./cases/cases4.jpg" alt="" />
+          </div>
+          <div class="column">
+            <img src="./cases/cases5.jpg" alt="" />
+            <img src="./cases/cases6.jpg" alt="" />
+          </div>
+          <div class="column">
+            <img src="./cases/cases7.jpg" alt="" />
+            <img src="./cases/cases8.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Blog -->
+      <section id="blog" class="blog flex-columns flex-reverse">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="./home/blog.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-secondary">
+              <h4>April 16 2020</h4>
+              <h2>Blog Post One</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                illum, animi earum ea amet sequi reiciendis sit corporis sunt
+                iusto cupiditate odio maxime adipisci cumque eligendi nemo
+                dolore id itaque?
+              </p>
+              <a href="blog.html" class="btn btn-outline">
+                <i class="fas fa-chevron"></i>
+                Read Our Blog
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
