--- a/newsgrid/article.html
+++ b/newsgrid/article.html
@@ -48,19 +48,26 @@
       </div>
     </nav>
 
-    <section id="about">
+    <section id="article">
       <div class="container">
         <div class="page-container">
           <article class="card">
-            <h1 class="l-heading">About Our Organization</h1>
+            <img src="./image_resources/articles/ent1.jpg" alt="" />
+            <h1 class="l-heading">Lorem ipsum dolor sit amet.</h1>
+            <div class="meta">
+              <small>
+                <i class="fas fa-user"></i>Written by Andrew Talle
+              </small>
+              <div class="category category-ent">Entertainment</div>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore
-              debitis beatae ad doloremque voluptate, blanditiis suscipit error
-              quam fugit sapiente, aliquid quia libero incidunt recusandae enim
-              voluptas nulla sequi similique? Temporibus ad est minima magni
-              molestias obcaecati consequatur cumque exercitationem deleniti
-              eos, animi facere recusandae, pariatur eveniet neque? Voluptatem,
-              molestias.
+              Lorem ipsum dolor sit amet consectetur, Technologyisicing elit.
+              Labore debitis beatae ad doloremque voluptate, blanditiis suscipit
+              error quam fugit sapiente, aliquid quia libero incidunt recusandae
+              enim voluptas nulla sequi similique? Temporibus ad est minima
+              magni molestias obcaecati consequatur cumque exercitationem
+              deleniti eos, animi facere recusandae, pariatur eveniet neque?
+              Voluptatem, molestias.
             </p>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
@@ -84,7 +91,31 @@
               delectus odio provident?
             </p>
           </article>
-          <aside class="card bg-primary">
+
+          <aside id="categories" class="class">
+            <h2>Categories</h2>
+            <ul class="list">
+              <li>
+                <a href="#"><i class="fas fa-chevron-right"></i>Sports</a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="fas fa-chevron-right"></i>Entertainment</a
+                >
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-chevron-right"></i>Technology</a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-chevron-right"></i>Fashion</a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-chevron-right"></i>Shopping</a>
+              </li>
+            </ul>
+          </aside>
+
+          <aside class="card bg-secondary">
             <h2>Join Our Club</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit,
